<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="104dp"
        android:layout_height="153dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/quiz" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/my_question"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yes_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1947"
            android:textSize="18sp" />

        <Button
            android:id="@+id/no_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1987"
            android:textSize="18sp" />


    </LinearLayout>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">


    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/nextbutton"
        android:src="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/ic_media_ff"/>
</LinearLayout>

</LinearLayout>

